--- a/htmx+node/package.json
+++ b/htmx+node/package.json
@@ -12,7 +12,8 @@
 	"license": "ISC",
 	"dependencies": {
 		"cors": "^2.8.5",
-		"express": "^4.19.2"
+		"express": "^4.19.2",
+		"xss": "^1.0.15"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.4"
